kubernetes/apps/media/sonarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 65534
        runAsGroup: 65534
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: sonarr
          image: ghcr.io/onedr0p/sonarr-develop:4.0.11@sha256:91f219ec537b4501a7fee51f6ce6c829d85c1b7f5ae21e8214e4abf14111ad2f
          imagePullPolicy: Always
          resources: {}
          volumeMounts:
            - name: samba-config
              mountPath: /config
            - name: sonarr-service
              mountPath: /downloads
      volumes:
        - name: samba-config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: sonarr-service
          nfs:
            server: 192.168.1.111
            path: /mnt/STORAGE-01/Media-Storage
