kubernetes/apps/media/sonarr/app/ingress.yaml
# ---
# apiVersion: traefik.io/v1alpha1
# kind: IngressRoute
# metadata:
#   name: sonarr
#   annotations:
#     kubernetes.io/ingress.class: traefik-external
# spec:
#   entryPoints:
#     - websecure
#   routes:
#     - match: Host(`sonarr.local.solonsstuff.com`)
#       kind: Rule
#       services:
#         - name: sonarr-service
#           port: 80
#       middlewares:
#         - name: default-headers
#   tls:
#     secretName: local-solonsstuff-com-live-tls

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: traefik-middlewares-authentik@kubernetescrd
  name: sonarr
spec:
  rules:
    - host: sonarr.local.solonsstuff.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.local.solonsstuff.com
      secretName: local-solonsstuff-com-live-tls
